test/tests/stages/6_statements_and_conditional_expressions/valid/binary_false_condition.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  const int(1)
  +
  const int(2)
  ==
  const int(4)
  )
  return
  const int(5)
  ;
  }
