test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/declaration_as_statement.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  const int(5)
  )
  int
  identifier(i)
  =
  const int(0)
  ;
  }
